[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-env"
version = "0.1.0"
description = "Warehouse logistics environment for OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic"
]

# This is the specific fix the validator asked for!
[project.scripts]
server = "server.app:main"